# vortex-hash

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  LICENSE-APACHE  LICENSE-MIT  README.md  SECURITY.md
.github/: SECURITY.md
.github/workflows/: ci.yml  release.yml
benches/: vortex_hash_bench.rs
docs/: architecture.md  benchmarks.md  migration.md  security_whitepaper.md
examples/: example.rs
src/: compatibility.rs  constant_time.rs  core.rs  ecosystem.rs  enterprise.rs  fallback.rs  hardware.rs  lib.rs  main.rs  migration.rs  proofs.rs  security.rs  utilities.rs
tests/: side_channel.rs
