[package]
name = "vortex_hash"
version = "0.1.0"
edition = "2021"
authors = ["VortexHash Developers <security@vortexhash.org>"]
description = "Quantum-resistant cryptographic hash function with GPU acceleration and constant-time operations"
license = "MIT OR Apache-2.0"
repository = "https://github.com/your-org/vortex_hash"
keywords = ["crypto", "hash", "quantum-resistant", "gpu", "performance", "cryptography"]
categories = ["cryptography", "no-std"]
readme = "README.md"
documentation = "https://docs.rs/vortex_hash"
homepage = "https://vortexhash.org"
publish = true

[dependencies]
zeroize = "1.8"
zeroize_derive = "1.5"
rand = { version = "0.8", default-features = false, features = ["std"] }
sha2 = { version = "0.10", default-features = false, features = ["std"] }
siphasher = { version = "0.3", default-features = false }
xxhash-rust = { version = "0.8", default-features = false }
hmac = { version = "0.12", default-features = false, features = ["std"] }
subtle = "2.5"
md5 = { version = "0.7", default-features = false, features = ["std"] }
sha1 = { version = "0.10", default-features = false }
rayon = "1.8"

[features]
default = ["std"]
std = []
no_std = []          # No standard library support
simd = ["std"]       # SIMD optimizations (AVX2, NEON)
cuda = ["std"]       # NVIDIA CUDA GPU acceleration
vulkan = ["std"]     # Cross-platform GPU acceleration
quantum = []         # Quantum-resistant modes (includes proofs)
hardware = []        # Hardware acceleration features
proofs = ["quantum"] # Formal proofs and verification
constant_time = []   # Side-channel protection
side_channel_protected = [] # Enhanced side-channel resistance
experimental = []    # Experimental features
security_hardened = [] # Maximum security configuration
memory_safe = []     # Additional memory safety checks
legacy_api = []      # Legacy API compatibility
formal_verified = ["proofs"] # Formal verification support

[dev-dependencies]
criterion = "0.5"
proptest = "1.0"
cargo-tarpaulin = "0.26"

[[bench]]
name = "vortex_hash_bench"
harness = false

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
opt-level = 3

[profile.dev]
opt-level = 1